--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-scripts": "5.0.0"
   },
   "scripts": {
-    "devstart": "nodemon src/server/index.js",
+    "devstart": "concurrently \"react-scripts start\" \"nodemon src/server/index.js\"",
     "start": "node src/server/index.js",
     "build": "react-scripts build",
     "lint": "eslint",
