--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@prisma/client": "^3.10.0",
     "babel": "^6.23.0",
     "bcrypt": "^5.0.1",
+    "concurrently": "^7.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
