--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     ]
   },
   "devDependencies": {
+    "@faker-js/faker": "^6.0.0-beta.0",
     "eslint": "^8.10.0",
     "eslint-plugin-react": "^7.29.3",
     "jasmine": "^4.0.2",
