--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "project-team-fullstack-free-choice",
   "version": "0.1.0",
   "private": true,
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "dependencies": {
     "@babel/core": "^7.17.5",
     "@prisma/client": "^3.10.0",
@@ -44,5 +47,6 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
     "prisma": "^3.10.0"
+   
   }
 }
